[package]
name = "dyn-ts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ms = "0.1.1"
bytes = "1.1.0"
byteorder = "1.4.3"
aws-config = "0.10.1"
aws-sdk-dynamodb = "0.10.1"
tokio = { version = "1", features = ["full"] }